Add MapUtils Add AppendString method to ConfigBuilder Add GenericMapConfigurable Add flags and enchants to ItemStackConfigurable